Fixes from build